// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render checked 1`] = `
<div>
  <button
    data-checked="false"
    type="button"
  >
    label
  </button>
</div>
`;

exports[`Checkbox should render unchecked 1`] = `
<div>
  <button
    data-checked="true"
    type="button"
  >
    label
  </button>
</div>
`;
